# notebooks

./: .gitignore  AutoML Runs Created.ipynb  Mid-Season Player Z-scores.ipynb  Player Z-scores.ipynb  README.md  automl.py  fantasy2019.xlsx  fantasy2020.xlsx  fantasy2021.xlsx  fantasy2022.xlsx  fantasy2023.xlsx  fantasy_draft_sheet_2025_03_23.xlsx  player_z_scores_preseason.ipynb  pyproject.toml
.ipynb_checkpoints/: Player Z-scores-checkpoint.ipynb
